// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrialLicenseBanner should NOT render banner if api call returns NOT TRIAL 1`] = `<div />`;

exports[`TrialLicenseBanner should render banner and provide feedback button if api call returns TRIAL and not expired 1`] = `
<div>
  <div
    class="trialLicenseBanner notExpired"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--padding-left-large"
      style="width: 95%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary10 StyledProps--font-variation-form-message-warning"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon StyledProps--main infoIcon StyledProps--padding-right-small"
          data-icon="info-message"
        >
          <svg
            fill="none"
            height="25"
            viewBox="0 0 24 24"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12 21.494c-5.385 0-9.75-4.365-9.75-9.75s4.365-9.75 9.75-9.75 9.75 4.365 9.75 9.75a9.704 9.704 0 01-1.55 5.276l1.484 3.44a.75.75 0 01-.985.986l-3.447-1.486A9.704 9.704 0 0112 21.494zM10.876 7.62a1.125 1.125 0 102.25 0 1.125 1.125 0 00-2.25 0zM12 10.225a.75.75 0 00-.75.75v4.502a.75.75 0 001.5 0v-4.502a.75.75 0 00-.75-.75z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        common.banners.trial.description
      </p>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-left-large StyledProps--flex StyledProps--flex-alignItems-center"
      >
        <p
          class="StyledProps--font StyledProps--main link StyledProps--color StyledProps--color-primary6"
        >
          common.banners.trial.contactSales
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--color StyledProps--color-primary6"
        >
          or
        </p>
      </div>
      <p
        class="StyledProps--font StyledProps--main link StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center"
      >
        common.banners.trial.provideFeedback
      </p>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--large"
      data-testid="trial-banner-dismiss"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`TrialLicenseBanner should render expired banner BUT NO extend trial button if it is expired more than 14 days 1`] = `
<div>
  <div
    class="trialLicenseBanner expired"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--padding-left-large"
      style="width: 95%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white StyledProps--font-variation-form-message-warning"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon bp3-icon-issue StyledProps--main issueIcon StyledProps--padding-right-small"
          icon="issue"
        >
          <svg
            data-icon="issue"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              issue
            </desc>
            <path
              d="M8 16A8 8 0 118 0a8 8 0 010 16zm0-2A6 6 0 108 2a6 6 0 000 12zm1-2H7v-2h2v2zm0-3H7V4h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        common.banners.trial.expired.description
      </p>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-left-large StyledProps--flex StyledProps--flex-alignItems-center"
      >
        <p
          class="StyledProps--font StyledProps--main link StyledProps--color StyledProps--color-white"
        >
          common.banners.trial.contactSales
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--color StyledProps--color-white"
        >
          or
        </p>
      </div>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--large"
      data-testid="trial-banner-dismiss"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`TrialLicenseBanner should render expired banner and extend trial button if it is expired less than or equal to 14 days 1`] = `
<div>
  <div
    class="trialLicenseBanner expired"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--padding-left-large"
      style="width: 95%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white StyledProps--font-variation-form-message-warning"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon bp3-icon-issue StyledProps--main issueIcon StyledProps--padding-right-small"
          icon="issue"
        >
          <svg
            data-icon="issue"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              issue
            </desc>
            <path
              d="M8 16A8 8 0 118 0a8 8 0 010 16zm0-2A6 6 0 108 2a6 6 0 000 12zm1-2H7v-2h2v2zm0-3H7V4h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        common.banners.trial.expired.description
      </p>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-left-large StyledProps--flex StyledProps--flex-alignItems-center"
      >
        <p
          class="StyledProps--font StyledProps--main link StyledProps--color StyledProps--color-white"
        >
          common.banners.trial.contactSales
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--color StyledProps--color-white"
        >
          or
        </p>
      </div>
      <p
        class="StyledProps--font StyledProps--main link StyledProps--color StyledProps--color-white StyledProps--flex StyledProps--flex-alignItems-center"
      >
        common.banners.trial.expired.extendTrial
      </p>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--large"
      data-testid="trial-banner-dismiss"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
